----------------------------------------------------------------------
Feb 3, 2015 - Clojure 1.3 - 1.6, sheet v21

Added (my-map k) -> (get my-map k) shorthand to Maps/Examine.

----------------------------------------------------------------------
Dec 19, 2014 - Clojure 1.3 - 1.6, sheet v20

Grimoire 0.4.0 fixes and updates, thanks to Reid McKenzie and Alex
Robbins.

Add set! to Special Forms section.  It was only in the Java interop
section before, but of course it is also useful for setting
thread-local bindings of Vars.

----------------------------------------------------------------------
Nov 26, 2014 - Clojure 1.3 - 1.6, sheet v19

Added a few other kinds of sorted sets and sorted maps:

    flatland.ordered.set/ordered-set
    flatland.ordered.map/ordered-map
    clojure.data.priority-map/priority-map
    flatland.useful.map/ordering-map

----------------------------------------------------------------------
Nov 25, 2014 - Clojure 1.3 - 1.6, sheet v18

Added many links to "Reader Macros" section, including to specific
anchor points within http://clojure.org/reader that are now available.

----------------------------------------------------------------------
Sep 14, 2014 - Clojure 1.3 - 1.6, sheet v17

Added some functions previously not in cheatsheet:

    extends? - Now in Protocols/Test
    extend extend-protocol extenders - New section Protocols/Other
    class? bases supers type - Now in Java Interoperation/General

Also some Java String methods:

    .startsWith .endsWith .contains - Now in Strings/Test

Add link to Java API for BigInteger in Numbers/Bitwise section, since
Clojure bitwise functions only work on Longs and smaller.

Update Java API links to Java 7.  Java API links were to Java 6 docs
in earlier cheatsheet versions.

----------------------------------------------------------------------
Aug 29, 2014 - Clojure 1.3 - 1.6, sheet v16

Reorganized some operations on sets, maps, and relations.
