@@ -3,6 +3,11 @@ Feb 3, 2015 - Clojure 1.3 - 1.6, sheet v21
 
 Added (my-map k) -> (get my-map k) shorthand to Maps/Examine.
 
+Move mapv and filterv from Vectors/Ops to Vectors/Create.  Also add
+them to Using a Seq/Construct coll.  They return a vector, but they
+can take any collection as an argument, so Vector/Ops wasn't really
+appropriate.
+
 ----------------------------------------------------------------------
 Dec 19, 2014 - Clojure 1.3 - 1.6, sheet v20
 
